--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,8 @@
 [build]
   command = "npm run build"
-  publish = "build"
+  publish = "dist"  # or "build" depending on your setup
 
-[[
-redirects
-]]
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
